--- a/Betabit.Weather.WebApp/Views/Home/Create.cshtml
+++ b/Betabit.Weather.WebApp/Views/Home/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Betabit.Weather.WebApp.Models.Restaurant
+﻿@using Betabit.Weather.WebApp.Models
+@model Restaurant
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -8,10 +9,22 @@
     
     <h1>Create</h1>
 
-    <form action="/" method="post">
-        <input type="text" name="Name" value="" />
+<form method="post">
+    <div>
+        <label asp-for="Name"></label>
+        <input asp-for="Name"/>
+        <span asp-validation-for="Name"></span>
+    </div>
+    @*<input type="text" name="Name" value=""/>*@
+    
+    <div>
+        <label asp-for="Cuisine"></label>
+        <select asp-for="Cuisine"
+                asp-items="Html.GetEnumSelectList<CuisineType>()"></select>
+        <span asp-validation-for="Cuisine"></span>
+    </div>
 
-        <input type="submit" name="save" value="Save"/>
-    </form>
+    <input type="submit" name="save" value="Save"/>
+</form>
 </body>
 </html>
