--- a/Betabit.Weather.WebApp/Views/Home/Create.cshtml
+++ b/Betabit.Weather.WebApp/Views/Home/Create.cshtml
@@ -1,13 +1,9 @@
-﻿@using Betabit.Weather.WebApp.Models
-@model Restaurant
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿@model Restaurant
+@{
+    ViewBag.Title = "Create Restaurant";
+}
     
-    <h1>Create</h1>
+<h1>Create</h1>
 
 <form method="post">
     <div>
@@ -26,5 +22,3 @@
 
     <input type="submit" name="save" value="Save"/>
 </form>
-</body>
-</html>
