--- a/Betabit.Weather.WebApp/Views/Home/Details.cshtml
+++ b/Betabit.Weather.WebApp/Views/Home/Details.cshtml
@@ -1,7 +1,9 @@
-﻿@model Betabit.Weather.WebApp.Models.Restaurant
+﻿@model Restaurant
+@{
+    ViewBag.Title = Model.Name;
+}
 
 <h1>@Model.Name</h1>
-
 <div>
     Id: @Model.Id
 </div>
