--- a/Betabit.Weather.WebApp/Views/Home/Index.cshtml
+++ b/Betabit.Weather.WebApp/Views/Home/Index.cshtml
@@ -1,25 +1,32 @@
-﻿@model Betabit.Weather.WebApp.ViewModels.Home.HomeIndexViewModel;
+﻿@model HomeIndexViewModel
+@{
+    ViewBag.Title = "Home Page";
+}
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    <h1>@Model.CurrentMessage</h1>
-    <table>
-        @foreach(var restaurant in Model.Restaurants)
-        {
-            <tr>
-                <td>@restaurant.Id</td>
-                <td>@restaurant.Name</td>
-                <td>
-                    <a href="/home/details/@restaurant.Id">Details</a>
-                    @Html.ActionLink("Go", "Details", new { id = restaurant.Id })
-                    <a asp-action="Details" asp-route-id="@restaurant.Id">More</a>
-                </td>
-            </tr>
-        }
-    </table>
+<h1>All Restaurants</h1>
+
+@foreach (var restaurant in Model.Restaurants)
+{
+    @Html.Partial("_Summary", restaurant)
+}
+
+
+@*<table>
+    @foreach (var restaurant in Model.Restaurants)
+    {
+        <tr>
+            <td>@restaurant.Id</td>
+            <td>@restaurant.Name</td>
+            <td>
+                <a href="/home/details/@restaurant.Id">Details</a>
+                @Html.ActionLink("Go", "Details", new { id = restaurant.Id })
+                <a asp-action="Details" asp-route-id="@restaurant.Id">More</a>
+                <a asp-page="/Restaurants/Edit" asp-route-id="@restaurant.Id">Edit</a>
+            </td>
+        </tr>
+    }
+</table>*@
+
+<div>
     <a asp-action="Create">Add Restaurant</a>
-</body>
-</html>
+</div>
